tests/lean/fail/example.lean
open tactic Expr
example : False := by do exact $ const `doesNotExist []
